# puzzles

./: .gitignore  README.md
advent-of-code-solutions/: .gitignore  README.md
advent-of-code-solutions/julia/: .gitignore  LICENSE  Project.toml  README.md
advent-of-code-solutions/julia/src/: Advent.jl  Visualize.jl  utils.jl
advent-of-code-solutions/julia/test/: runtests.jl
advent-of-code-solutions/mathematica/advent2018/: Advent2018Solutions.nb
advent-of-code-solutions/mathematica/advent2019/: advent2019.wl
advent-of-code-solutions/mathematica/advent2020/: p03.wl
advent-of-code-solutions/python/: pyproject.toml
advent-of-code-solutions/python/src/advent/: run.py  template.py  tools.py
advent-of-code-solutions/python/src/advent/advent2015/: p02.py  p03.py  p04.py  p05.py  p06.py
advent-of-code-solutions/python/src/advent/advent2018/: p09.py
advent-of-code-solutions/python/src/advent/advent2019/: p01.py  p02.py  p03.py  p04.py
advent-of-code-solutions/python/src/advent/advent2020/: p01.py  p02.py  p03.py  p04.py  p05.py  p06.py  p07.py  p08.py  p09.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p17.py  p18.py
advent-of-code-solutions/python/src/advent/advent2021/: p01.py  p02.py  p03.py  p04.py  p05.py  p06.py  p07.py  p08.py  p09.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py  p17.py  p18.py  p19.py  p20.py  p21.py  p22.py  p23.py  p24.py  p24_group.py  p24notes.txt  p25.py
advent-of-code-solutions/python/src/advent/advent2022/: p01.py  p02.py  p03.py  p04.py  p05.py  p06.py  p07.py  p08.py  p09.py  p10.py  p11.py  p11_cython.c  p11_cython.pyx  p12.py
advent-of-code-solutions/python/src/advent/advent2023/: p01.py  p02.py  p03.py  p04.py  p05.py  p06.py  p07.py  p08.py  p09.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py
advent-of-code-solutions/python/src/advent/advent2024/: p01.py  p02.py  p03.py  p04.py  p05.py  p06.py  p07.py  p08.py  p09.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py  p17.py  p18.py  p19.py  p20.py  p21.py  p22.py  p23.py  p24.py  p25.py
advent-of-code-solutions/python/tests/: test_run.py
advent-of-code-solutions/python/tests/test_2021/: test_p22.py
advent-of-code-solutions/rust/: Cargo.toml
advent-of-code-solutions/rust/src/: lib.rs  main.rs  question.rs  runner.rs  solutions.rs  utils.rs
cryptopals/: .gitignore  p1.py  p2.py  p3.py
leetcode/: pyproject.toml
leetcode/python/: problems.py
misc/: fifteen_puzzle_solver.py  frog_find.nb  hilbert.py  puzzles.py  reversi.py  shark_game.py  wordle.py
(+25 files in other folders)
