[project]
name = "advent"
version = "0.1.0"
description = "Advent of Code solutions."
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.11",
    "joblib>=1.4.2",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.2",
    "more-itertools>=10.4.0",
    "numba>=0.60.0",
    "numpy>=2.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scipy>=1.14.0",
    "sympy>=1.13.2",
    "tqdm>=4.66.5",
    "typer>=0.12.4",
    "pytest>=8.3.2",
    "beautifulsoup4>=4.12.0",
    "scalene>=1.5.49",
    "line-profiler>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --doctest-continue-on-failure"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.ruff]
line-length = 120
lint.extend-select = [
    "F", # Pyflakes
    "I", # isort
    # "D",    # pydocstyle
    "PD",   # pandas-vet
    "NPY",  # numpy
    "PERF", # perflint
    "FURB", # refurbish
    # "PL",   # pylint
    "FLY", # flynt
    "B",   # flakes-bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "A",   # builtins
    "ISC", # implicit-str-concat
    "LOG", # logging
    "G",   # logging-format
    "PT",  # pytest-style
    "RET", # return
    "SIM", # simplify
    "PTH", # use-pathlib
]
lint.ignore = ["SIM108", "B905"]
format.docstring-code-format = true

[tool.uv.sources]
advent = { workspace = true }
